[package]
name = "inject"
version = "0.1.3"
authors = ["Tobias Nilsson <tobias.jens.nilsson@gmail.com>"]
description = "Experimental IOC library for Rust"
edition = "2018"
readme = "README.md"
repository = "https://github.com/tobni/inject-rs"
license-file = "LICENSE"
keywords = ["injection", "ioc", "resolve", "control", "dependency"]
categories = ["config"]


[dependencies]
inject-macro = { path = "./inject-macro", version = "0.1.1" }

[dev-dependencies]
rstest = "0.6.4"
