[package]
name = "inject-macro"
version = "0.1.0"
authors = ["Tobias Nilsson <tobias.jens.nilsson@gmail.com>"]
edition = "2018"
description = "Experimental IOC library for Rust, procedural macros"
readme = "../README.md"
repository = "https://github.com/tobni/inject-rs"
license-file = "../LICENSE"

[lib]
proc-macro = true

[dependencies]
syn = { version = "1.0.23", features = ["full"] }
quote = "1.0.6"
proc-macro2 = "1.0.17"